tests/cpp/runbox/compile.stderr
source.cpp: In function 'int main()':
source.cpp:4:5: error: 'cout' was not declared in this scope
     cout<<"Hello World!"
     ^~~~
